# docs/swagger.json
@@ -60,6 +60,9 @@
                         "ApiKeyAuth": []
                     }
                 ],
+                "consumes": [
+                    "multipart/form-data"
+                ],
                 "tags": [
                     "User"
                 ],
@@ -72,7 +75,14 @@
                         "required": true
                     },
                     {
-                        "description": "User ID",
+                        "type": "file",
+                        "description": "Audio file to be uploaded",
+                        "name": "recorded_voice",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "description": "create user",
                         "name": "CreateUserRequest",
                         "in": "body",
                         "required": true,
@@ -342,6 +352,13 @@
                         "required": true
                     },
                     {
+                        "type": "file",
+                        "description": "Image file to be uploaded",
+                        "name": "BusinessCardBackgroundImage",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
                         "description": "BusinessCardBackground",
                         "name": "dto.CreateBackgroundRequest",
                         "in": "body",
@@ -398,9 +415,6 @@
                         "ApiKeyAuth": []
                     }
                 ],
-                "consumes": [
-                    "multipart/form-data"
-                ],
                 "tags": [
                     "BusinessCard"
                 ],
@@ -410,13 +424,6 @@
                         "description": "Bearer [Firebase JWT Token]",
                         "name": "Authorization",
                         "in": "header",
-                        "required": true
-                    },
-                    {
-                        "type": "file",
-                        "description": "Image file to be uploaded",
-                        "name": "BusinessCardBackgroundImage",
-                        "in": "formData",
                         "required": true
                     },
                     {
@@ -926,13 +933,6 @@
                         "name": "Authorization",
                         "in": "header",
                         "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "User ID",
-                        "name": "user_id",
-                        "in": "path",
-                        "required": true
                     }
                 ],
                 "responses": {
@@ -949,6 +949,9 @@
                     {
                         "ApiKeyAuth": []
                     }
+                ],
+                "consumes": [
+                    "multipart/form-data"
                 ],
                 "tags": [
                     "User"
@@ -971,10 +974,10 @@
                         }
                     },
                     {
-                        "type": "string",
-                        "description": "User ID",
-                        "name": "user_id",
-                        "in": "path",
+                        "type": "file",
+                        "description": "Audio file to be uploaded",
+                        "name": "recorded_voice",
+                        "in": "formData",
                         "required": true
                     }
                 ],
@@ -1002,13 +1005,6 @@
                         "description": "Bearer [Firebase JWT Token]",
                         "name": "Authorization",
                         "in": "header",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "User ID",
-                        "name": "user_id",
-                        "in": "path",
                         "required": true
                     }
                 ],
@@ -1257,11 +1253,6 @@
                 "business_card_background": {
                     "type": "string",
                     "example": "#ffffff"
-                },
-                "business_card_background_image": {
-                    "type": "string",
-                    "x-nullable": true,
-                    "example": "url"
                 }
             }
         },
