# internal/controller/business_card_background/business_card_background_controller.go
@@ -13,6 +13,7 @@ import (
 // @Router /v1/users/business_card_backgrounds [POST]
 // @Security ApiKeyAuth
 // @Param Authorization header string true "Bearer [Firebase JWT Token]"
+// @Param BusinessCardBackgroundImage formData file true "Image file to be uploaded"
 // @Param dto.CreateBackgroundRequest body dto.CreateBackgroundRequest true "BusinessCardBackground"
 // @Success 201 {object} dto.BackgroundResponse
 func CreateBusinessCardBackground(c *gin.Context) {
