# internal/controller/business_card_background/dto/create_background_request.go
@@ -2,5 +2,4 @@ package dto
 
 type CreateBackgroundRequest struct {
 	BusinessCardBackgroundColor string `json:"business_card_background" example:"#ffffff"`
-	BusinessCardBackgroundImage string `json:"business_card_background_image" example:"url" extensions:"x-nullable"`
 }
